--- a/assets/css/media_query.css
+++ b/assets/css/media_query.css
@@ -1,23 +1,62 @@
 @media screen and (max-width:1599px) {
 
 }
+
+/* <!-- =================================================================== --> */
 @media screen and (max-width:1399px) {
 
 }
-@media screen and (max-width:1199px) {
 
+/* <!-- =================================================================== --> */
+@media screen and (max-width:1199px) {
+   /* Slider CSS  */
+   header .item .cover .header-content{
+      padding: 30px 40px;
+      margin: 0 50px;
+   }
+   /* .abc-services {
+   height: 538px;
+   } */
 }
+
+/* <!-- =================================================================== --> */
 @media screen and (max-width:991px) {
 
 }
+
+/* <!-- =================================================================== --> */
 @media screen and (max-width:767px) {
-
+   header .item .cover .header-content h1{
+      margin: 8px 5px;
+   }
+   header .item .cover .header-content .line{
+      width: 115%;
+      height: 90%;
+   }
+   header .item .cover .header-content p{
+      margin-bottom: 25px;
+      width: 100% !important;
+   }
 }
 
+/* <!-- =================================================================== --> */
 @media screen and (max-width:575px) {
-
+   header .item .cover .header-content p{
+      margin: 15px 0;
+   }
+   .ifram-video iframe {
+      height: 300px;
+      width: 300px;
+   }
 }
 
+/* <!-- =================================================================== --> */
 @media screen and (max-width:425px) {
-
+   header .item .cover .header-content h1{
+      margin: 0;
+   }
+   header .item .cover .header-content p{
+      margin: 18px 0;
+      font-size: 14px;
+   }
 }
