--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,60 @@ body {
 }
 
 /* <!-- ========================================================================== --> */
+
+.header nav ul li a:hover,
+.first-header nav ul li a:hover {
+   color:blueviolet;
+}
+.header nav ul li .dropdown-menu a:hover,
+.first-header nav ul li .dropdown-menu a:hover {
+   color: hotpink;
+}
+
+.header nav .dropdown-menu {
+   border: none;
+   border-radius: 20px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.header .dropdown-menu {
+   border: none;
+   border-radius: 0;
+   padding: .5em;
+   box-shadow: 0 3px 6px rgba(0, 0, 0, .23);
+}
+.header .dropdown-menu ul {
+   list-style: none;
+   padding: 0;
+}
+.header .dropdown-menu li a {
+   color: gray;
+   padding: .5em;
+}
+
+.header .dropdown-menu ul p {
+   font-size: 1.2em;
+   font-weight: bold;  
+   color: #000;
+}
+
+@media screen and (min-width:992px){
+   .header .dropdown:hover .dropdown-menu{
+      display: flex;
+   }
+   .header .dropdown-menu.show {
+      display: flex;
+   }
+}
+
+@media screen and (max-width:991px){
+   .header .dropdown-menu.show {
+   max-height: 350px;
+   overflow-y: scroll;
+}
+}
+
+
 .logo-img {
    height: auto;
    width: 275px;
@@ -262,9 +316,12 @@ header:hover .owl-next {
    opacity: 1;
 }
 
+/* <!-- ========================================================================== --> */
+/* <============================  Shiping Service Section  ==========================>  */
 
-.shiping-div .my-border{
-border-top: 5px solid;
+.shiping-div .my-border,
+.economical_service .my-border{
+   border-top: 5px solid;
    width: 30%;
    max-width: 100%;
    margin: 0 0 0 0;
@@ -278,10 +335,148 @@ border-top: 5px solid;
    box-shadow: 5px 5px 8px lightgrey, 10px 10px 8px #F0FFFF; 
    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
-/* .abc-services {
-   height: 538px;
-} */
+
+/* <!-- ========================================================================== --> */
+/* <==================  Express & Economical Services Section  =====================>  */
+
+.icon-part img {
+   width: 15%;
+}
+.capcha .quiz-box {
+      width: 65% !important;
+   }
+
+
+.s_content p {
+   font-size: 16px;
+}
+
+.abc1 .s_content {
+   position: relative;
+   top: 0;
+   transition: top ease 0.5s;
+}
+
+.abc1:hover .s_content {
+   top: -20px;
+   background-color: #fff;
+   border-bottom: 5px solid darkgray;
+   border-top-left-radius: 25px;
+   border-top-right-radius: 25px;
+   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+}
+
+.abc1:hover .s_content img {
+   border: none;
+   border-radius: 2rem;
+   transition: 0.5s;
+}
+
+.abc1:hover .s_content .icon-img img {
+   border: none;
+   border-radius: 0;
+}
+
+.icon-img img {
+   width: 20%;
+   height:auto;
+}
+.s_content img{
+   height: auto;
+   width: 80%;
+}
+.s_content .icon-img img {
+   width: 17%;
+   height: auto;
+}
+
+
+   /* <!-- ======================================================================= --> */
+   /* <!------------------------ Headquater Section  --------------------> */
 
 
 
 
+   .headquater-img {
+      width: 40%;
+      height: 100%;
+   }
+   .chat-img {
+      width: 35%;
+      height: 100%;
+   }
+   .wechat-img {
+      width: 100%;
+      height: 100%;
+   }
+
+   /* <!-- ======================================================================= --> */
+   /* <!------------------------ Footer-link Section  --------------------> */
+
+   .underline span {
+   font-size: 4px;
+}
+
+.hr {
+    border: 1px solid;
+    height: 2px;
+    width: 75px;
+    opacity: 1;
+}
+
+.link-content a {
+    color: #1e1e1e;
+    text-decoration: none;
+}
+
+.link-content a:hover {
+    text-decoration: underline;
+}
+
+   /* <!-- ======================================================================= --> */
+   /* <!------------------------ Footer Section  --------------------> */
+
+.footer-icon a {
+    color: #797878fc;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 28px;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 20px;
+}
+
+.footer-icon a:hover {
+    background-color: #4fa0b5;
+    color: #fff;
+    transition: all 0.7s ease;
+}
+
+
+.to-top {
+
+    background-color: #fff;
+    color: #1f1f1f;
+    position: fixed;
+    bottom: 45px;
+    right: 15px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    opacity: 1;
+    pointer-events: auto;
+    transition: all 0.4s;
+    z-index: 100;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.to-top:hover {
+    color: #1f1f1f;
+}
