- Change Color - Change border-radius in mega menu

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,16 +12,16 @@ body {
 
 .header nav ul li a:hover,
 .first-header nav ul li a:hover {
-   color:blueviolet;
+   color:#1e1e1e;
 }
 .header nav ul li .dropdown-menu a:hover,
 .first-header nav ul li .dropdown-menu a:hover {
-   color: hotpink;
+   color: #0073B1;
 }
 
 .header nav .dropdown-menu {
    border: none;
-   border-radius: 20px;
+   border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
